--- a/UC9/CSS/style.css
+++ b/UC9/CSS/style.css
@@ -14,11 +14,14 @@
     padding: 20px;
 }
 
-.header-site nav{
-    display: inline-flex;
-    vertical-align: 700%;
+.nav-login{
+    position: absolute;
+    width: 457px;
+    height: 104px;
+    left: 70%;
+    top: 16%;
     color: white;
-    
+
 }
 
 .menu-navegação{
@@ -33,5 +36,14 @@
     color: white;
     background: #1E69AE;
     
+}
+
+.barra-de-pesquisa{
+    position: absolute;
+    top: 196px;
+    height: 30px;
+    left: 86%;
+    border-radius: 10px;
+    border-style: none;
 }
 
