--- a/UC9/CSS/style.css
+++ b/UC9/CSS/style.css
@@ -17,7 +17,7 @@
 .nav-login{
     position: absolute;
     width: 357px;
-    left: 70%;
+    right: 0;
     top: 16%;
     color: white;
 
@@ -41,9 +41,16 @@
 .barra-de-pesquisa{
     position: absolute;
     top: 196px;
+    width: 330px;
     height: 30px;
-    left: 86%;
+    right: 0;
+    margin-right: 30px;
     border-radius: 10px;
     border-style: none;
+}
+
+.banner-promocao{
+    width: 100%;
+    height: 420px;
 }
 
