--- a/UC9/CSS/style.css
+++ b/UC9/CSS/style.css
@@ -30,12 +30,18 @@
     height: 40px;
 }
 
+.menu-navegação nav{
+    margin-left: 30px;
+}
+
 .menu-navegação nav a{
-    padding: 10px 5px;
+    padding: 10px;
     color: white;
     background: #1E69AE;
     position: relative;
     top: 12px;
+    font-weight: bold;
+    text-transform: uppercase;
 }
 
 .barra-de-pesquisa{
@@ -50,7 +56,10 @@
 }
 
 .banner-promocao{
-    width: 100%;
-    height: 420px;
+    width: 95%;
+    display: flex;
+    margin: 30px auto;
 }
+
+
 
