--- a/UC9/CSS/style.css
+++ b/UC9/CSS/style.css
@@ -62,9 +62,12 @@
 }
 
 .produtos li{
-    margin: 10px 70px;
-    display: inline-block;
+    justify-content: space-between;
+    display: inline-block; 
+    border: black solid 2px;
+    border-radius: 5px;
 }
+
 
 .barra{
     display: block;
@@ -77,6 +80,13 @@
     background: #033666;
     width: 100%;
     height: 200px;
+}
+
+.informações{
+    float: left;
+    margin: 40px 15%;
+    width: 800px;
+    background-color: #1E69AE;
 }
 
 h3{
@@ -94,5 +104,9 @@ h4{
     text-align: center;
     color: aliceblue;
     text-transform: uppercase;
+}
+
+.informações{
+    width: 70%;
 }
 
