imagem do carrinho de compras

--- a/UC9/CSS/style.css
+++ b/UC9/CSS/style.css
@@ -22,6 +22,12 @@
     color: white;
 }
 
+#carrinhoDeCompras{
+    background-color: #1E69AE;
+    border-radius: 5px;
+    border: solid black 3px;
+}
+
 #login{
     background-color: #033666;
     padding: 2px 4px;
