criação da pagina de testes para navegação no site

--- a/UC9/CSS/style.css
+++ b/UC9/CSS/style.css
@@ -16,10 +16,13 @@
 
 .nav-login{
     position: absolute;
-    width: 400px;
-    right: 0;
+    right: 30px;
     top: 10%;
     color: white;
+}
+
+.nav-login a{
+    margin-right: 10px;
 }
 
 #carrinhoDeCompras{
